文章上传份文件

--- a/en-us/index.html
+++ b/en-us/index.html
@@ -92,7 +92,7 @@
         </div>
         <div class="col-sm-5 download-button-wrapper">
             <div class="getWrapper cursor"
-                 onclick="location='https://itunes.apple.com/app/bituniverse/id1329338902'">
+                 onclick="location='https://itunes.apple.com/app/bituniverse/id1329338902?mt=8'">
                 <img class="radius-shadow" src="../image/getAppStore_blue.png" alt="">
             </div>
             <div class="getWrapper cursor"
@@ -402,7 +402,7 @@
 
 
         <div class="download-wrapper">
-            <a class="download-img" href="https://itunes.apple.com/app/bituniverse/id1329338902">
+            <a class="download-img" href="https://itunes.apple.com/app/bituniverse/id1329338902?mt=8">
                 <img class="radius-shadow" src="../image/getAppStore_white.png" alt="">
             </a>
 
@@ -577,7 +577,7 @@
                 </a>
             </div>
             <div class="col-sm-1 col-xs-2">
-                <a target="_blank" href="https://t.me/bituniversecn">
+                <a target="_blank" href="https://t.me/bituniverse">
 
                     <img src="../image/telegram.png" alt="">
                 </a>
@@ -626,7 +626,10 @@
 <!--引入公共JS-->
 <!--私有JS-->
 <script src="../js/myJs.js"></script>
-<script src="../js/article.js"></script>
+<script>
+    var xmlFile="../js/article_en.xml"
+</script>
+<script src="../js/index_article.js"></script>
 
 
 </body>
