--- a/en-us/news.html
+++ b/en-us/news.html
@@ -127,7 +127,7 @@
                 </a>
             </div>
             <div class="col-sm-1 col-xs-2">
-                <a target="_blank" href="https://t.me/bituniversecn">
+                <a target="_blank" href="https://t.me/bituniverse">
 
                     <img src="../image/telegram.png" alt="">
                 </a>
@@ -178,6 +178,10 @@
 <!--引入公共JS-->
 <!--私有JS-->
 <script src="../js/myJs.js"></script>
+
+<script>
+    var xmlFile="../js/article_hans.xml"
+</script>
 <script src="../js/article.js"></script>
 
 
