--- a/en-us/team.html
+++ b/en-us/team.html
@@ -178,7 +178,7 @@
                 </a>
             </div>
             <div class="col-sm-1 col-xs-2">
-                <a target="_blank" href="https://t.me/bituniversecn">
+                <a target="_blank" href="https://t.me/bituniverse">
 
                     <img src="../image/telegram.png" alt="">
                 </a>
