--- a/zh-hans/download.html
+++ b/zh-hans/download.html
@@ -95,7 +95,7 @@
 
 
         <div class="download-wrapper">
-            <a class="download-img" href="https://itunes.apple.com/cn/app/bituniverse/id1329338902">
+            <a class="download-img" href="https://itunes.apple.com/cn/app/bituniverse/id1329338902?mt=8">
                 <img class="radius-shadow" src="../image/getAppStore_blue.png" alt="">
             </a>
 
