--- a/zh-hans/news.html
+++ b/zh-hans/news.html
@@ -179,6 +179,10 @@
 <!--引入公共JS-->
 <!--私有JS-->
 <script src="../js/myJs.js"></script>
+
+<script>
+    var xmlFile="../js/article_hans.xml"
+</script>
 <script src="../js/article.js"></script>
 
 
