--- a/zh-hant/index.html
+++ b/zh-hant/index.html
@@ -91,7 +91,7 @@
         </div>
         <div class="col-sm-5 download-button-wrapper">
             <div class="getWrapper cursor"
-                 onclick="location='https://itunes.apple.com/app/bituniverse/id1329338902'">
+                 onclick="location='https://itunes.apple.com/app/bituniverse/id1329338902?mt=8'">
                 <img class="radius-shadow" src="../image/getAppStore_blue.png" alt="">
             </div>
             <div class="getWrapper cursor"
@@ -394,7 +394,7 @@
 
 
         <div class="download-wrapper">
-            <a class="download-img" href="https://itunes.apple.com/app/bituniverse/id1329338902">
+            <a class="download-img" href="https://itunes.apple.com/app/bituniverse/id1329338902?mt=8">
                 <img class="radius-shadow" src="../image/getAppStore_white.png" alt="">
             </a>
 
@@ -606,7 +606,10 @@
 <!--引入公共JS-->
 <!--私有JS-->
 <script src="../js/myJs.js"></script>
-<script src="../js/article.js"></script>
+<script>
+    var xmlFile="../js/article_hant.xml"
+</script>
+<script src="../js/index_article.js"></script>
 
 
 </body>
