--- a/en-us/article.html
+++ b/en-us/article.html
@@ -129,7 +129,7 @@
                 </a>
             </div>
             <div class="col-sm-1 col-xs-2">
-                <a target="_blank" href="https://t.me/bituniversecn">
+                <a target="_blank" href="https://t.me/bituniverse">
 
                     <img src="../image/telegram.png" alt="">
                 </a>
@@ -181,6 +181,11 @@
 <!--引入公共JS-->
 <!--私有JS-->
 <script src="../js/myJs.js"></script>
+
+
+<script>
+    var xmlFile="../js/article_en.xml"
+</script>
 <script src="../js/article.js"></script>
 
 
