--- a/en-us/download.html
+++ b/en-us/download.html
@@ -96,7 +96,7 @@
 
 
         <div class="download-wrapper">
-            <a class="download-img" href="https://itunes.apple.com/app/bituniverse/id1329338902">
+            <a class="download-img" href="https://itunes.apple.com/app/bituniverse/id1329338902?mt=8">
                 <img class="radius-shadow" src="../image/getAppStore_blue.png" alt="">
             </a>
 
@@ -159,7 +159,7 @@
                 </a>
             </div>
             <div class="col-sm-1 col-xs-2">
-                <a target="_blank" href="https://t.me/bituniversecn">
+                <a target="_blank" href="https://t.me/bituniverse">
 
                     <img src="../image/telegram.png" alt="">
                 </a>
