--- a/zh-hant/news.html
+++ b/zh-hant/news.html
@@ -178,6 +178,10 @@
 <!--引入公共JS-->
 <!--私有JS-->
 <script src="../js/myJs.js"></script>
+
+<script>
+    var xmlFile="../js/article_hant.xml"
+</script>
 <script src="../js/article.js"></script>
 
 
