繁体文章内容更新，英文文章清空， 页面空白处理

--- a/en-us/news.html
+++ b/en-us/news.html
@@ -96,7 +96,7 @@
 
 
         <div class="nav-video" style="display: none;">
-            <p class="notFound">No Video Yet</p>
+            <p class="notFound">Nothing here</p>
         </div>
         <div class="view-more" id="view-more">More</div>
         <div class="noting-more">Nothing More</div>
@@ -180,7 +180,7 @@
 <script src="../js/myJs.js"></script>
 
 <script>
-    var xmlFile="../js/article_hans.xml"
+    var xmlFile="../js/article_en.xml"
 </script>
 <script src="../js/article.js"></script>
 
